# dphpc-project

./: .gitignore  2d_implementation_chan.cpp  CMakeLists.txt  Chan2DVisualizer.py  README.md  bsub_script.sh  daint_job.sh  run_config.py  strong_scale_daint.job  strong_scale_euler.job  time_vs_input_size_daint.job
Benchmark_configs/: strong_scaling_daint.py  time_vs_input_size.py
Execution/: GridRunHandler.py  benchmark_postprocessing.py  grid_run_exe.py  run_config.py
FiguresAndMovies/: figuresandmovies_readme.txt
Input/: input_readme.txt
InputCreation/: ImagePointsCreator.py  create_points_from_img.py
Output/: dummy_git.txt  output_readme.txt
Presentations/: firstPresentationPowerPoint.pptx
Presentations/firstPresentation/: firstPresentationPowerPoint.pptx
Visualization/: AnimationTest.py  AnimationWrapper.py  ChanAnimation.py  DataLoader.py  GrahamAnimation.py  plot_tn.py
chan_visualization/: AnimationWrapper.py  Chan2DVisualizer.py  ChanAnimation.py  DataLoader.py  FinalStateVisualizer.py  GrahamAnimation.py  Point.py
dphpcpython/scripts/: animation_wrapper.py  benchmark_postprocessing.py  create_points_from_img.py  grid_run_exe.py  grid_run_exe_weak_scaling.py  weak_scaling_plot.py
python/libs/: paths.py
python/scripts/: animation_wrapper.py  benchmark_postprocessing.py  create_points_from_img.py  grid_run_exe.py  grid_run_exe_weak_scaling.py  weak_scaling_plot.py
python_visualization/: Visualizer2D.py  constants.py  examples.py
quickhull/: CMakeLists.txt  quickhull
quickhull/src/: main.cpp
src/: AlgorithmsRunner.cpp  Bin_Mpi_Algo.cpp  ChanAlgorithm.cpp  ChanAlgorithm.h  FileWriter.cpp  FileWriter.h  GrahamScanAlgorithm.cpp  GrahamScanAlgorithm.h  Graham_Graham.cpp  Graham_Graham.hpp  Graham_Jarvis.cpp  Graham_Jarvis.hpp  Graham_Quickhull.cpp  Graham_Quickhull.hpp  JarvisAlgorithm.cpp  JarvisAlgorithm.h  Jarvis_BinJarvis.cpp  Jarvis_BinJarvis.hpp  Jarvis_Graham.cpp  Jarvis_Graham.hpp  Jarvis_Jarvis.cpp  Jarvis_Jarvis.hpp  Jarvis_Quickhull.cpp  Jarvis_Quickhull.hpp  Makefile  Mhull.cpp  Mpi_Algo.cpp  Point.h  Quickhull.cpp  Quickhull.hpp  Quickhull_BinJarvis.cpp  Quickhull_BinJarvis.hpp  Quickhull_Graham.cpp  Quickhull_Graham.hpp  Quickhull_Jarvis.cpp  Quickhull_Jarvis.hpp  Quickhull_Quickhull.cpp  Quickhull_Quickhull.hpp  Simple_Mpi_Algo.cpp  bird_points  (+12 more)
src/Evaluation/: evaluator.py  evaluator_main.py  evaluator_parameters.py  evaluator_utilities.py  plotter.py  (+3 more)
(+20 files in other folders)
